# oh-my-heroacademia

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  tag-guard.yml
.omc/: project-memory.json
.omc/sessions/: 01723703-8672-486c-83d8-6c1e9355e919.json  01916c4c-0594-4aa6-8fd1-a07c081f7369.json  0221deee-5ae1-48d7-80ce-26e6ca051603.json  07db2279-678d-478d-a112-c21ad6205d09.json  0d54779f-0823-49a4-afa4-6c4778824d6d.json  0e6b3061-a646-41c6-81f4-e61149ab3695.json  15ee78ef-47ef-4836-b422-59aabfa5cfd5.json  1e89948b-a946-47a6-bfe8-8fab930b0614.json  24a94e78-528c-4e4e-bc54-a1cee4f8272b.json  2516231e-69f2-4c6b-81e3-9893bd90d873.json  2ae718b2-dd8a-47b5-94fe-626ed5300f76.json  2d6996e3-d47f-4b3a-9aa8-08cf8d083867.json  2ffa16b0-95c4-4b23-85bf-59ee0cb671ff.json  302aa1fb-6232-40ab-927c-16a2c41c7bc4.json  3099e699-7c30-4974-b2dc-59bed0f9628e.json  (+34 more)
.omha/: redact-patterns.example.txt
cards/: omc.json  omd.json  omp.json  oms.json  omx.json  superpowers.json
hooks/: cross_lane_emit.py  redact_guard.py  route_emit.py  route_guard.py  route_stop_guard.py
scripts/: check_tag_drift.py  lane_drift_check.py
tests/: test_card_sync.py  test_card_triggers.py  test_cards_valid.py  test_cross_lane_emit.py  test_cross_lane_integration.py  test_domain_first_routing.py  test_lane_drift_check.py  test_plugin_manifest.py  test_redact_guard.py  test_registry.py  test_route_emit.py  test_route_guard.py  test_route_stop_guard.py  test_router.py  test_server.py  test_smoke.py  test_tag_drift.py
(+5 files in other folders)
