[project]
name = "omha"
version = "0.2.0"
description = "oh-my-heroacademia — declarative harness card registry (superpowers/OMC/OMD). Routing is done by the Claude Code session reading the cards; no HTTP server."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3,<0.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
