[project]
name = "omha"
version = "0.3.0"
description = "oh-my-heroacademia — Claude Code plugin + harness card registry. A UserPromptSubmit hook reads cards/*.json and the session routes lanes (superpowers/OMC/handle-directly); no HTTP server."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3,<0.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
