[project]
name = "omha"
version = "0.8.0"
description = "oh-my-heroacademia — Claude Code plugin + harness card registry. A UserPromptSubmit hook reads cards/*.json and the session routes lanes (superpowers/OMC/handle-directly); no HTTP server."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
